recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:10: error: not found: value incrment
    spiral(steps-1, angle, length + incrment, increment)
                                    ^