recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  
  if(steps==0){
    avance(length)
    gauche(angle)
  }
  else{
    avance(length)
    gauche(length)
    spiral(steps-1, angle, length + incrment, increment)
  }
}